--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,145 @@
+/* General Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
+  background-color: #121212;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
-  background-color: #f0f0f0;
-}
-
-h1 {
-  color: #333;
-}
-
-p {
-  color: #666;
-  max-width: 600px;
-  text-align: center;
 }
 
 .container {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
+  padding: 25px;
+  margin-top: 100px;
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+  background: #1e1e1e;
+  max-width: 400px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+h1 {
+  font-weight: 700;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.subtitle {
+  font-weight: 400;
+  margin-bottom: 10px;
+  padding: 10px;
+  color: #b3b3b3;
+}
+
+#results {
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+#score {
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px;
+}
+
+#message {
+  font-size: 16px;
+  margin-top: 10px;
+  padding: 10px;
+  color: #b3b3b3;
+}
+
+.buttons button {
+  font-size: 16px;
+  padding: 10px 20px;
+  margin: 10px;
+  cursor: pointer;
+  border: 2px solid #ffffff;
+  border-radius: 5px;
+  background-color: transparent;
+  color: #ffffff;
+  transition: all 0.3s ease;
+}
+
+.buttons button:hover {
+  background-color: #ffffff;
+  color: #121212;
+}
+
+/* Footer */
+.footer {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.footer p {
+  font-size: 14px;
+  color: #b3b3b3;
+}
+
+.footer a {
+  color: #ffffff;
+  margin-left: 10px;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  color: #bbbbbb;
+}
+
+/* Modal */
+#gameOverModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+#gameOverModal.active {
+  display: flex;
+}
+
+.modal-content {
+  background-color: #1e1e1e;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.modal-content h2 {
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.modal-content button {
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  border: 2px solid #ffffff;
+  background-color: transparent;
+  color: #ffffff;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.modal-content button:hover {
+  background-color: #ffffff;
+  color: #121212;
 }
